--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "xee-boilerplate",
+  "name": "ricardian-model",
   "version": "1.0.0",
   "dependencies": {
     "babel-polyfill": "^6.8.0",
+    "material-ui": "^0.15.4",
     "react": "^15.0.2",
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
-    "redux-actions": "^0.9.1",
+    "redux-actions": "^0.10.1",
+    "redux-concatenate-reducers": "^1.0.0",
     "redux-logger": "^2.6.1",
     "redux-saga": "^0.10.4"
   },
@@ -26,12 +28,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ryo33/xee_double_auction.git"
+    "url": "git+https://github.com/xeejp/RicardianModel.git"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ryo33/xee_double_auction/issues"
+    "url": "https://github.com/xeejp/RicardianModel/issues"
   },
-  "homepage": "https://github.com/ryo33/xee_double_auction#readme",
+  "homepage": "https://github.com/xeejp/RicardianModel#readme",
   "description": ""
 }
