--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ricardian-model",
   "version": "1.0.0",
   "dependencies": {
+    "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.8.0",
     "material-ui": "^0.15.4",
     "react": "^15.0.2",
