--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
     "react-throttle-props": "^1.1.0",
+    "react-throttle-render": "^1.1.1",
     "redux": "^3.5.2",
     "redux-actions": "^0.10.1",
     "redux-concatenate-reducers": "^1.0.0",
